revised files with suggestions
